--- a/reprote0.2/3-1-reglas.tex
+++ b/reprote0.2/3-1-reglas.tex
@@ -1,4 +1,4 @@
-\begin{BussinesRule}{BR8}{Fecha de Nacimiento correcta.}
+\begin{BussinesRule}{BR1}{Cortesía de acceso.}
 	\BRitem[Tipo:] Regla de integridad referencial o estructural. 
 				% Otras opciones para tipo: 
 				% - Regla de integridad referencial o estructural. 
@@ -7,29 +7,49 @@
 	\BRitem[Clase:] Habilitadora. 
 				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
 	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
-	\BRitem[Descripción:]	Las Fechas de Nacimiento que se registran en el SINACEM para cualquier Persona debe ser mayores al día Primero de Enero del año 1900 y menor a la Fecha Actual.
-	\BRitem[Motivación:] Evitar fraudes al PRONIM por el registro de personas que no han nacido al momento de su registro.
-	\BRitem[Sentencia:] $\forall p \in Persona \Rightarrow 01-Enero-1900~<~p.fechaDeNacimiento~<~fechaActual$.
-	\BRitem[Ejemplo positivo:] Para el día 12 de Octubre del 2013, cumplen la regla: 		
-        \begin{itemize}
-        	\item 11 de Octubre del 2013
-			\item 20 de Diciembre del 2010
-			\item 2 de Enero del 1900
-        \end{itemize}
+	\BRitem[Descripción:]	Si una persona no registrada en los clubs solicita una cortesía, se le registrara en el sistema y se le dará acceso por una solo única vez sin posibilidad de repetición..
+	\BRitem[Motivación:] Para generar ventas de membresía.
+	%\BRitem[Sentencia:] $\forall p \in Persona \Rightarrow 01-Enero-1900~<~p.fechaDeNacimiento~<~fechaActual$.
+	\BRitem[Ejemplo positivo:] Para personas que no estén registradas en el sistema, cumplen la regla: 		
+        	
+	\BRitem[Ejemplo negativo:] Para quienes aparece su nombre en el sistema, no cumplen la regla.
 	
-	\BRitem[Ejemplo negativo:] Para el día 12 de Octubre del 2013, no cumplen la 
+	\BRitem[Referenciado por:] %\hyperlink{CUCE3.2}{CUCE3.2}, \hyperlink{CUCE3.3}{CUCE3.3}.
+\end{BussinesRule}
+
+\begin{BussinesRule}{BR2}{Límite de personas en Membresía Familiar.} 
+	\BRitem[Tipo:] Regla de integridad referencial o estructural. 
+				% Otras opciones para tipo: 
+				% - Regla de integridad referencial o estructural. 
+				% - Regla de operación, (calcular o determinar un valor.).
+				% - Regla de inferencia de un hecho.
+	\BRitem[Clase:] Cronometrada. 
+				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
+	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
+	\BRitem[Descripción:] Al adquirir una membresía familiar el número máximo de usuarios que se pueden registrar para la entrada a las sucursales es de 10 personas sin distinción de edad y sin remplazo.
+	\BRitem[Ejemplo positivo:] Para familias con menos de 11 de integrantes, cumplen la regla:
 		\begin{itemize}
-        	\item 12 de Octubre del 2013
-			\item 20 de Diciembre del 2014
-			\item 1 de Enero del 1900
-			\item 31 de Diciembre del 1899
-        \end{itemize}
+			\item Familias con 10 integrantes
+			\item Familias con 9 integrantes
+			\item .
+			\item .
+			\item .
+			\item Familias con 2 integrantes
+			contenidos...
+		\end{itemize}
 	
-	\BRitem[Referenciado por:] \hyperlink{CUCE3.2}{CUCE3.2}, \hyperlink{CUCE3.3}{CUCE3.3}.
+	\BRitem[Ejemplo negativo:] Familias que quieran adquirir la membresia con integrantes de mas de 10 personas, no cumplen la regla:
+		\begin{itemize}
+			\item Familias con 11 integrantes
+			\item Familias con 15 integrantes
+			contenidos...
+		\end{itemize}
+	
+	\BRitem[Referenciado por:] 
 \end{BussinesRule}
 
-\begin{BussinesRule}{BR129}{Determinar si un Estudiante puede inscribir Seminario.} 
-	\BRitem[Tipo:] Regla de integridad referencial o estructural. 
+\begin{BussinesRule}{BR3}{Acceso a la sucursal}
+	\BRitem[Tipo:] Regla de integridad referencial o estructural.
 				% Otras opciones para tipo: 
 				% - Regla de integridad referencial o estructural. 
 				% - Regla de operación, (calcular o determinar un valor.).
@@ -37,16 +57,47 @@
 	\BRitem[Clase:] Habilitadora. 
 				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
 	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
-	\BRitem[Descripción:] Un Estudiante requere del 80\% de créditos para inscribirse a un Seminario y no haber cursado y reprobado otro seminario.
-	\BRitem[Ejemplo positivo:] 
+	\BRitem[Descripción:] Si se desea ingresar a cualquier sucursal, el acceso es único con membresía, si no cuenta con una puede consultar la RB1, de alguna otra forma se reserva el derecho de admisión.
+	\BRitem[Ejemplo positivo:] Aquellos que tengan su membresía, cumplen con la regla:
+		\begin{itemize}
+			\item Presenta su membresía a la recepcionista.
+			\item Presenta su correo a la recepcionista.
+			contenidos...
+		\end{itemize}
+	
+	\BRitem[Ejemplo negativo:] Aquellas personas que no traigan su membresía o no esten registrados en el sistema, no cumplen con la regla:
+		\begin{itemize}
+			\item Presenta correo no registrado
+			\item Presenta membresía vencida por mas de 1 semana.
+			contenidos...
+		\end{itemize}
+	
+	\BRitem[Referenciado por:] 
+\end{BussinesRule}
+
+\begin{BussinesRule}{BR5}{Acceso a Actividades}
+	\BRitem[Tipo:] Regla de integridad referencial o estructural.
+				% Otras opciones para tipo: 
+				% - Regla de integridad referencial o estructural. 
+				% - Regla de operación, (calcular o determinar un valor.).
+				% - Regla de inferencia de un hecho.
+	\BRitem[Clase:] Habilitadora. 
+				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
+	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
+	\BRitem[Descripción:] El acceso a cada actividad está sujeto al tipo de membresía con el cual se cuenta o se contrató, no es posible acceder a una actividad que no este referenciada en la membresía contratada a menos que sea pagada de forma individial.
+	\BRitem[Ejemplo positivo:] Cumplen la regla aquellos que en su tipo de membresía les permita a acceder a ciertas actividades:
+		\begin{itemize}
+			\item Membresía Familiar ingresa a las canchas y algunas actividades.
+			 \item Membresía Premium ingresa a todas las actividades de la sucursal.
+		\end{itemize}
 	
 	\BRitem[Ejemplo negativo:] 
 	
 	\BRitem[Referenciado por:] 
 \end{BussinesRule}
 
-\begin{BussinesRule}{BR130}{Determinar si un Estudiante puede inscribirse en un Seminario}
-	\BRitem[Tipo:] Regla de inferencia de un hecho.
+\begin{BussinesRule}{BR6}{Adquisición de Membresías}
+	\BRitem[Tipo:] Regla de integridad referencial o estructural.
 				% Otras opciones para tipo: 
 				% - Regla de integridad referencial o estructural. 
 				% - Regla de operación, (calcular o determinar un valor.).
@@ -54,16 +105,26 @@
 	\BRitem[Clase:] Habilitadora. 
 				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
 	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
-	\BRitem[Descripción:] El Estudiante debe pertenecer a la Carrera del Seminario y debe haber Cupo en el grupo del Seminario.
-	\BRitem[Ejemplo positivo:] 
+	\BRitem[Descripción:] Un usuario puede tener un único tipo de membresía acorde a sus necesidades.
+	%\BRitem[Sentencia:] $Impuesto(e, s) = Costo(e, s)\cdot0.16$.
+	\BRitem[Ejemplo positivo:] Al conmprar una membresía cumplen la regla:
+		\begin{itemize}
+			\item Personas que cambien de membresía.
+			\item Personas que no tengan membresía.
+		\end{itemize}
 	
 	\BRitem[Ejemplo negativo:] 
+		\begin{itemize}
+			\item Personas que no quieran renovar su membresía y quieran adquirir una doble membresía.
+			\item Personas que no efectuen su pago.
+			
+		\end{itemi}
 	
 	\BRitem[Referenciado por:] 
 \end{BussinesRule}
 
-\begin{BussinesRule}{BR143}{Validar el horario del estudiante}
-	\BRitem[Tipo:] Regla de operación, (calcular o determinar un valor.).
+\begin{BussinesRule}{BR7}{Acceso a personas con retrazos en pagos.}
+	\BRitem[Tipo:] Regla de integridad referencial o estructural.
 				% Otras opciones para tipo: 
 				% - Regla de integridad referencial o estructural. 
 				% - Regla de operación, (calcular o determinar un valor.).
@@ -71,83 +132,18 @@
 	\BRitem[Clase:] Habilitadora. 
 				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
 	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
-	\BRitem[Descripción:] Las Materias y Seminarios inscritos por el alumno, en un periodo específico, no pueden impartirse en el mismo día de la semana en horas traslapadas.
-	\BRitem[Ejemplo positivo:] 
+	\BRitem[Descripción:] Si un cliente no genera su pago par mas de una semana, al ingreso a la sucursal la secretaria indica que debe realizar su pago a la brevedad, tomando en cuenta que el próximo ingreso se le negara.
+	%\BRitem[Sentencia:] $CostoTotal = Costo(e, s) + Impuesto(e, s)$.
+	\BRitem[Ejemplo positivo:] El cliente que no relice su pago, cumplira la regla:
+		\begin{itemize}
+			\item Personas con mas de una semana sin realizar pago no entra a la sucursal.
+			\item Clientes que tengan menos de una semana sin pagar la membresía podrán acceder.
+		\end{itemize}
 	
 	\BRitem[Ejemplo negativo:] 
-	
-	\BRitem[Referenciado por:] 
-\end{BussinesRule}
-
-\begin{BussinesRule}{BR180}{Calcular costos del Estudiante}
-	\BRitem[Tipo:] Regla de operación, (calcular o determinar un valor.).
-				% Otras opciones para tipo: 
-				% - Regla de integridad referencial o estructural. 
-				% - Regla de operación, (calcular o determinar un valor.).
-				% - Regla de inferencia de un hecho.
-	\BRitem[Clase:] Habilitadora. 
-				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
-	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
-	\BRitem[Descripción:] Los servicios se cobran de la siguiente forma:
-		\begin{Citemize}
-			\item {\em Estudiantes Regulares:} Se les Cobran todos los servicios al 100\% de su costo.
-			\item {\em Estudiantes becados:} Se les otorga un 80\% de descuento en el costo de todos los servicios (antes del IVA).
-			\item {\em Estudiantes extranjeros:} Se les cobran los servicios al 200\% del costo registrado.
-		\end{Citemize}
-	\BRitem[Sentencia:] $\forall~e~\in~\mathbb{E}\textrm{studiantes}~\land~\forall~s~\in \mathbb{S}\textrm{eminario}~\Rightarrow$
-		\begin{displaymath}
-			Costo(e,s) = \left\{ \begin{array}{ll}
-			s.costo & , si~e.tipo = \textrm{Estudiante regular}\\
-			{s.costo}\over{5} & , si~e.tipo = \textrm{Estudiante becado}\\
-			s.costo \cdot 2 & , si~e.tipo = \textrm{Estudiante extranjero}
-			\end{array} \right.
-		\end{displaymath}
-	\BRitem[Ejemplo positivo:] 
-	
-	\BRitem[Ejemplo negativo:] 
-	
-	\BRitem[Referenciado por:] 
-\end{BussinesRule}
-
-\begin{BussinesRule}{BR45}{Calcular impuestos por seminario}
-	\BRitem[Tipo:] Regla de operación, (calcular o determinar un valor.).
-				% Otras opciones para tipo: 
-				% - Regla de integridad referencial o estructural. 
-				% - Regla de operación, (calcular o determinar un valor.).
-				% - Regla de inferencia de un hecho.
-	\BRitem[Clase:] Habilitadora. 
-				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
-	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
-	\BRitem[Descripción:] Los impuestos corresponden al 16\% correspondientes al IVA.
-	\BRitem[Sentencia:] $Impuesto(e, s) = Costo(e, s)\cdot0.16$.
-	\BRitem[Ejemplo positivo:] 
-	
-	\BRitem[Ejemplo negativo:] 
-	
-	\BRitem[Referenciado por:] 
-\end{BussinesRule}
-
-\begin{BussinesRule}{BR100}{Recibo del Estudiante por inscripción a Seminario.}
-	\BRitem[Tipo:] Regla de operación, (calcular o determinar un valor.).
-				% Otras opciones para tipo: 
-				% - Regla de integridad referencial o estructural. 
-				% - Regla de operación, (calcular o determinar un valor.).
-				% - Regla de inferencia de un hecho.
-	\BRitem[Clase:] Habilitadora. 
-				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
-	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
-	\BRitem[Descripción:] El  Recibo del Estudiante debe mostrar el total del costo con el siguiente desglose:
-		\begin{displaymath}\begin{array}{lr}
-			Costo: & \$ XXX.XX\\
-			Descuento~aplicado~(YY\%): & \$ XXX.XX\\
-			Subtotal: & \$ XXX.XX\\
-			IVA~(16\%): & \$ XXX.XX\\\hline
-			Total: & \$ XXX.XX
-		\end{array}\end{displaymath}
-	\BRitem[Sentencia:] $CostoTotal = Costo(e, s) + Impuesto(e, s)$.
-	\BRitem[Ejemplo positivo:] 
-	
-	\BRitem[Ejemplo negativo:] 
+		\begin{itemize}
+			\item Personas que si pagen su membresía a tiempo si entran a al sucursal
+		\end{itemize}
 	
 	\BRitem[Referenciado por:] 
 \end{BussinesRule}
