V 0.4 en la carpeta de cu viene un archivo que dice dialog (ahi van los dialogos de pruebas)

--- a/reprote0.2/1introduccion.tex
+++ b/reprote0.2/1introduccion.tex
@@ -5,7 +5,7 @@
 %\cdtInstrucciones{
 %	Presentar el documento, indicando su contenido, a quien va dirigido, quien lo realizó, por que razón, dónde y cuando. \\
 %}
-	Este documento contiene la Especificacion del ptoyecto ``{\em Work out}'' correspondiente al trabajo realizado en el semestre 2017-2018-2 para la materia de Ingeniería de software en el grupo 3CV9 por el equipo {\em Nuevas Ideas Tecnológicas (NIT)}.
+	Este documento contiene la Especificacion del proyecto ``{\em Work out}'' correspondiente al trabajo realizado en el semestre 2017-2018-2 para la materia de Ingeniería de software en el grupo 3CV9 por el equipo {\em Nuevas Ideas Tecnológicas (NIT)}.
 
 %---------------------------------------------------------
 \section{Presentación}
@@ -16,7 +16,7 @@
 %}
 	Este documento contiene la especificación de los requerimientos del usuario y del sistema a desarrollar. Tiene como objetivo establecer las funciones del sistema para la evaluación al final del semestre y así poder acreditar la materia. 
 	
-	Este documento es el NO SE del proyecto ``{\em Work out}''.
+	Este documento es la documentación del proyecto presentado al final del semestre. ``{\em Work out}''.
 	
 %---------------------------------------------------------
 \section{Organización del contenido}
