--- a/reprote0.2/2ModeloDelAlcance.tex
+++ b/reprote0.2/2ModeloDelAlcance.tex
@@ -17,8 +17,8 @@
 
 \begin{figure}[htbp]
 	\begin{center}
-		\includegraphics[width=.8\textwidth]{images/organigramaEm}
-		\caption{Organigrama mal debe ser el de la empresa}
+		\includegraphics[width=.8\textwidth]{images/Organigrama}
+		\caption{Organigrama de la empresa}
 		\label{fig:organigrama}
 	\end{center}
 \end{figure}
@@ -28,7 +28,7 @@
 \begin{Usuario}{\subsection{Jefe de Inmobiliario}}{
 		Es el encargado de todas las operaciones que tengan que ver con con la sucursal, como lo son áreas, actividades y propiamente las sucursales, supervisa que los datos estén actualizados del inmueble.
 	}
-	\item[Responsabilidades:] \cdtEmpty
+		\item[Responsabilidades:] \cdtEmpty
 	\begin{itemize}
 		\item Supervisar la información de actividades, áreas y sucursales.
 		\item Agrega o modifica los datos.
@@ -47,6 +47,30 @@
 	\end{itemize}
 \end{Usuario}
 
+%---------------------------------------------------------
+%=======HASTA AQUI TERMINA PARA AGREGAR A TU ACTOR========
+
+%=========COPIA DESDE AQUI PARA AGREGAR A TU ACTOR=========
+%---------------------------------------------------------
+\begin{Usuario}{\subsection{Cliente}}{
+		No es encargado de ninguna parte de la sucursal, mas que asistir a la sucursal si es que paga su membresía.
+	}
+			\item[Responsabilidades:] \cdtEmpty
+		\begin{itemize}
+			\item hacer buen uso de las instalaciones
+		\end{itemize}
+		
+		\item[Perfil:] \cdtEmpty
+		\begin{itemize}
+			\item Cualquier perfil
+		\end{itemize}
+		\item[Procesos en los que participa:] \cdtEmpty
+		\begin{itemize}
+			\item PC-V01 Ingreso a la sucursal.
+			
+		\end{itemize}
+
+\end{Usuario}
 %---------------------------------------------------------
 %=======HASTA AQUI TERMINA PARA AGREGAR A TU ACTOR========
 
@@ -86,17 +110,17 @@
 \section{Especificación de plataforma}	
 
 \cdtInstrucciones{
-	Coloque un diagrama y su descripción para aclarar el tipo de solución propuesta. \\
+%	Coloque un diagrama y su descripción para aclarar el tipo de solución propuesta. \\
 	
-	En esta sección se debe aclarar:}
+	En esta sección se debe aclarar:
 	
 	\begin{description}
-		\item[Tipo de sistema:] Aplicación web.
-		\item[Software requerido:] --.
-		\item[Hardware requerido:] Tener como mínimo windows 7 o distribución de linunx a partir de la versión --.
-		\item[servicios:] --.
+		\item[Tipo de sistema:] Sistema web.
+		\item[Software requerido:] S.O. de 64 bits, preferible linux, phyton 2.7 V. Django 1.9, Framework bootstrap.
+		\item[Hardware requerido:] Computadora con arquitectura de 64 bits, procesador para arquitectura mencionada, RAM 4 GB (recomendado).
+		\item[servicios:] .
 	\end{description}
-
+}
 
 \begin{figure}[htbp!]
 	\begin{center}
