--- a/reprote0.2/3-1-reglas.tex
+++ b/reprote0.2/3-1-reglas.tex
@@ -118,7 +118,7 @@
 			\item Personas que no quieran renovar su membresía y quieran adquirir una doble membresía.
 			\item Personas que no efectuen su pago.
 			
-		\end{itemi}
+		\end{itemize}
 	
 	\BRitem[Referenciado por:] 
 \end{BussinesRule}
@@ -132,7 +132,7 @@
 	\BRitem[Clase:] Habilitadora. 
 				% Otras opciones para clase: Habilitadora, Cronometrada, Ejecutive.
 	\BRitem[Nivel:] Control. % Otras opciones para nivel: Control, Influencia.
-	\BRitem[Descripción:] Si un cliente no genera su pago par mas de una semana, al ingreso a la sucursal la secretaria indica que debe realizar su pago a la brevedad, tomando en cuenta que el próximo ingreso se le negara.
+	\BRitem[Descripción:] Si un cliente no genera su pago par mas de una semana, al ingreso a la sucursal la recepcionista indica que debe realizar su pago a la brevedad, tomando en cuenta que el próximo ingreso se le negara.
 	%\BRitem[Sentencia:] $CostoTotal = Costo(e, s) + Impuesto(e, s)$.
 	\BRitem[Ejemplo positivo:] El cliente que no relice su pago, cumplira la regla:
 		\begin{itemize}
