--- a/reprote0.2/4ModeloDinamico.tex
+++ b/reprote0.2/4ModeloDinamico.tex
@@ -2,22 +2,22 @@
 \chapter{Modelo dinámico}	
 \label{cap:modDinamico}
 
-	Este capítulo describe en modelo dinámico del sistema. en el se detallan todos los escenarios de ejecución del sistema. La figura~\ref{fig:casosDeUso} muestra el diagrama general del sistema y sus sib sistemas, y la figura~\ref{fig:casosDeUsoDetalle} muestra todos los casos de uso del sistema. En este documento solo detallamos los casos de uso del subsistema de gestión de cursos.
-	
+	Este capítulo se detallan todos los escenarios de ejecución del sistema. La figura~\ref{fig:CUcompleto1}  y la figurara~\ref{fig:CUcompleto2} muestra todos los casos de uso del sistema. En este documento solo detallamos los casos de uso del proyecto de gymnasios.
+
 \begin{figure}[htbp]
 	\begin{center}
-		\fbox{\includegraphics[width=.8\textwidth]{images/casosDeUso}}
-		\caption{Diagrama de casos de uso del sistema.}
-		\label{fig:casosDeUso}
+		\includegraphics[angle=90, width=.7\textwidth]{images/CUcompleto1}
+		\caption{Diagrama detallado del sistema parte 1.}
+		\label{fig:CUcompleto1}
 	\end{center}
 \end{figure}
 
 \begin{figure}[htbp]
-	\begin{center}
-		\includegraphics[angle=90, width=.7\textwidth]{images/casosDeUsoDetalle}
-		\caption{Diagrama detallado del sistema.}
-		\label{fig:casosDeUsoDetalle}
-	\end{center}
+	%\begin{center}
+		\includegraphics[angle=90, width=1.1\textwidth]{images/CUcompleto2}
+		\caption{Diagrama detallado del sistema parte 1.}
+		\label{fig:CUcompleto2}
+	%\end{center}
 \end{figure}
 
 %---------------------------------------------------------
@@ -31,7 +31,7 @@ A continuación se detallan los casos de uso.
 % CASOS DE USO
 
 \input{cu/cu17}
-
+\input{cu/dialog}
 %---------------------------------------------------------
 % PANTALLAS DE LOS CASOS DE USO
 \IUfig[.5]{LoginJI}{IU1}{Pantalla de login del jefe de inmobiliario.}
