--- a/reprote0.2/C2-EP2.tex
+++ b/reprote0.2/C2-EP2.tex
@@ -48,7 +48,11 @@
 
 %=========================================================
 %\include{5ModeloDeInteraccion}
-\include{cu17}
+\include{CU_35-39}
+%=========================================================
+\include{CP17}
+%\include{3-1-reglas}
+
 	
 
 
