Casos de uso añadidos al documento

--- a/reprote0.2/2ModeloDelAlcance.tex
+++ b/reprote0.2/2ModeloDelAlcance.tex
@@ -17,7 +17,7 @@
 
 \begin{figure}[htbp]
 	\begin{center}
-		\includegraphics[width=.8\textwidth]{images/Organigrama}
+		\includegraphics[width=.8\textwidth]{images/organigrama}
 		\caption{Organigrama de la empresa}
 		\label{fig:organigrama}
 	\end{center}
