--- a/reprote0.2/4ModeloDinamico.tex
+++ b/reprote0.2/4ModeloDinamico.tex
@@ -31,12 +31,13 @@ A continuación se detallan los casos de uso.
 % CASOS DE USO
 
 \input{cu/cu17}
+\input{cu/CUDaniel}
 \input{cu/dialog}
 %---------------------------------------------------------
 % PANTALLAS DE LOS CASOS DE USO
 \IUfig[.5]{LoginJI}{IU1}{Pantalla de login del jefe de inmobiliario.}
 
-\IUfig[.5]{InicioSesion}{IU2}{Pantalla de Inicio de Sesión del jefe de inmobiliario.}
+\IUfig[.5]{inicioSesion}{IU2}{Pantalla de Inicio de Sesión del jefe de inmobiliario.}
 
 \IUfig[.5]{ActividadesJI}{IU3}{Pantalla de Actividades.}
 
