--- a/reprote0.2/cu/dialog.tex
+++ b/reprote0.2/cu/dialog.tex
@@ -1,7 +1,7 @@
 \section{Guión de Pruebas}
 
 \subsection{Guión de prueba 1}
-
+\begin{itemize}
 \item ID: Guión 01
 \item ALCANCE: CU01
 \item NOMBRE: Iniciar sesioón de jefe de inmobiliario  
@@ -10,8 +10,8 @@
 \item CP 1:
 \item DATOS DE ENTRADA:\\
 	\begin{itemize}
-		\item Correo electrónico del J.I: Jefe_inmobiliario@hotmail.com
-		\item Contraseña: SOY_elJefe1
+		\item Correo electrónico del J.I: Jefe\_inmobiliario\@hotmail.com
+		\item Contraseña: SOY\_elJefe1
 	\end{itemize}
 \begin{center}			
 	\begin{tabular}{|l|l|l|l|}
