--- a/reprote0.2/cu/CUDaniel.tex
+++ b/reprote0.2/cu/CUDaniel.tex
@@ -168,7 +168,7 @@
 	
 \end{UCtrayectoria}
 
-%-------------------------------------- TERMINA descripción del caso de uso.
+e%-------------------------------------- TERMINA descripción del caso de uso.
 
 
 
