reporte version q se entrego al profe 0.5

--- a/reprote0.2/4ModeloDinamico.tex
+++ b/reprote0.2/4ModeloDinamico.tex
@@ -13,11 +13,11 @@
 \end{figure}
 
 \begin{figure}[htbp]
-	%\begin{center}
+	\begin{center}
 		\includegraphics[angle=90, width=1.1\textwidth]{images/CUcompleto2}
 		\caption{Diagrama detallado del sistema parte 1.}
 		\label{fig:CUcompleto2}
-	%\end{center}
+	\end{center}
 \end{figure}
 
 %---------------------------------------------------------
@@ -31,7 +31,10 @@ A continuación se detallan los casos de uso.
 % CASOS DE USO
 
 \input{cu/cu17}
+\input{cu/CUDaniel}
+\input{cu/luis2}
 \input{cu/dialog}
+\input{cu/luis1}
 %---------------------------------------------------------
 % PANTALLAS DE LOS CASOS DE USO
 \IUfig[.5]{LoginJI}{IU1}{Pantalla de login del jefe de inmobiliario.}
@@ -45,6 +48,20 @@ A continuación se detallan los casos de uso.
 \IUfig[.5]{FinEditarAC}{IU5}{Pantalla de Edición terminada.}
 
 \IUfig[.5]{VerActividadJI}{IU6}{Pantalla de Ver Actividad.}
+
+
+
+
+
+\IUfig[.5]{Instructores}{IU35}{Pantalla de Instructores.}
+
+\IUfig[.5]{NuevoInstructor}{IU351}{Pantalla Nuevo Instructor.}
+
+\IUfig[.5]{EditarInstructor}{IU352}{Pantalla Editar Instructor.}
+
+\IUfig[.5]{loginCliente}{IU22}{Pantalla de Inicio de sesion del cliente.}
+
+\IUfig[.5]{inicioCliente}{IU23}{Pantalla de Inicio del cliente.}
 
 
 
