reporte version 0.7 ?? con la version de isaac

--- a/reprote0.2/4ModeloDinamico.tex
+++ b/reprote0.2/4ModeloDinamico.tex
@@ -31,11 +31,11 @@ A continuación se detallan los casos de uso.
 % CASOS DE USO
 
 \input{cu/cu17}
+\input{cu/isaac}
 \input{cu/CUDaniel}
-<<<<<<< HEAD
 \input{cu/luis2}
-=======
->>>>>>> 0eff6495fec5e6e8df531b40918ac1ccee0f67e3
+
+%Fdialoos
 \input{cu/dialog}
 \input{cu/luis1}
 %---------------------------------------------------------
