--- a/reprote0.2/3ModeloDelNegocio.tex
+++ b/reprote0.2/3ModeloDelNegocio.tex
@@ -251,6 +251,39 @@
 	\brRel{\brRelComposition}{Sucursal}{Un \hyperlink{Area}{Area} pertenece a una \hyperlink{Sucursal}{Sucursal}}	
 	\end{cdtEntidad}
 	
-	%---------------------------------------------------------
+%---------------------------------------------------------
+%---------------------------------------------------------
 
+\begin{cdtEntidad}{Invitado}{Invitado}
+	\brAttr{ID}{Invitado}{Id}{Número de registro para identificar un Invitado.}{Sí}
+	\brAttr{Nombre}{Nombre}{Nombre corto}
+	{Nombre del Invitado.}{Sí}
+	\brAttr{Telefono}{Telefono}{Entero Largo}
+	{Numero Telefonico del Invitado.}{Sí}
+	\brAttr{ID}{Sucursal}{ID}{Numero de registro para identificar a la sucursal a la cual entrara el invitado}{SI}
+	\brAttr{Email}{Email}{Correo}
+	{Email del Inviado.}{Sí}
+	\cdtEntityRelSection
+	\brRel{\brRelAgregation}{Horario}{Un \hyperlink{Invitado}{Invitado} tiene una cortesia con un \hyperlink{Horario}{Horario} asignado.}
+	\brRel{\brRelAgregation}{Dia}{Un \hyperlink{Invitado}{Invitado} tiene una cortesia con un \hyperlink{Dia}{Dia} asignado.}
+	\brRel{\brRelAgregation}{Actividad}{Un \hyperlink{Invitado}{Invitado} tiene una cortesia con un \hyperlink{Actividad}{Actividad} asignada.}		
+	\brRel{\brRelComposition}{Sucursal}{Un \hyperlink{Invitado}{Invitado} Tiene una \hyperlink{Sucursal}{Sucursal} asignada.}	
+	\end{cdtEntidad}
+	
+%---------------------------------------------------------
+\begin{cdtEntidad}{Invitado}{Invitado}
+	\brAttr{ID}{Invitado}{Id}{Número de registro para identificar un Invitado.}{Sí}
+	\brAttr{Nombre}{Nombre}{Nombre corto}
+	{Nombre del Invitado.}{Sí}
+	\brAttr{Telefono}{Telefono}{Entero Largo}
+	{Numero Telefonico del Invitado.}{Sí}
+	\brAttr{ID}{Sucursal}{ID}{Numero de registro para identificar a la sucursal a la cual entrara el invitado}{SI}
+	\brAttr{Email}{Email}{Correo}
+	{Email del Inviado.}{Sí}
+	\cdtEntityRelSection
+	\brRel{\brRelAgregation}{Horario}{Un \hyperlink{Invitado}{Invitado} tiene una cortesia con un \hyperlink{Horario}{Horario} asignado.}
+	\brRel{\brRelAgregation}{Dia}{Un \hyperlink{Invitado}{Invitado} tiene una cortesia con un \hyperlink{Dia}{Dia} asignado.}
+	\brRel{\brRelAgregation}{Actividad}{Un \hyperlink{Invitado}{Invitado} tiene una cortesia con un \hyperlink{Actividad}{Actividad} asignada.}		
+	\brRel{\brRelComposition}{Sucursal}{Un \hyperlink{Invitado}{Invitado} Tiene una \hyperlink{Sucursal}{Sucursal} asignada.}	
+	\end{cdtEntidad}
 
