Se agregaron nuevas imagenes

--- a/reprote0.2/2ModeloDelAlcance.tex
+++ b/reprote0.2/2ModeloDelAlcance.tex
@@ -26,7 +26,7 @@
 %=========COPIA DESDE AQUI PARA AGREGAR A TU ACTOR=========
 %---------------------------------------------------------
 \begin{Usuario}{\subsection{Jefe de Inmobiliario}}{
-		Es el encargado de todas las operaciones que tengan que ver con con la sucursal, como lo son áreas, actividades y propiamente las sucursales, supervisa que los datos estén actualizados del inmueble.
+		Es el encargado de todas las operaciones que tengan que ver con con la sucursal, como lo son áreas, actividades y propiamente las sucursales. Mencionando que es el único que puede modificar las operaciones de las sucursales.
 	}
 		\item[Responsabilidades:] \cdtEmpty
 	\begin{itemize}
@@ -41,10 +41,59 @@
 	\end{itemize}
 	\item[Procesos en los que participa:] \cdtEmpty
 	\begin{itemize}
+		\item PC-V01 Aprobar la agregación de nuevas sucursales.
+		
+	\end{itemize}
+\end{Usuario}
+
+%---------------------------------------------------------
+%=======HASTA AQUI TERMINA PARA AGREGAR A TU ACTOR========
+
+%=========COPIA DESDE AQUI PARA AGREGAR A TU ACTOR=========
+%---------------------------------------------------------
+\begin{Usuario}{\subsection{Gerente}}{
+		Es el encargado de la sucursal en la que trabaja, responsable de realizar modificaciones de actividades, áreas, trabajadores y todo lo que tenga que ver con la propia sucursal.
+	}
+	\item[Responsabilidades:] \cdtEmpty
+	\begin{itemize}
+		\item Supervisar que los procesos se realicen correctamente.
+		\item Agrega o modifica los datos.
+	\end{itemize}
+	
+	\item[Perfil:] \cdtEmpty
+	\begin{itemize}
+		\item Amplia experiencia en el ramo.
+		\item Licenciatura como mínimo.
+	\end{itemize}
+	\item[Procesos en los que participa:] \cdtEmpty
+	\begin{itemize}
 		\item PC-V01 Aprobar la agregación de nuevas actividades.
-		\item PC-V02 Supervisar el ingreso a la sucursal
+		\item PC-V02 Supervisar que los demás procesos se cumplan
 		\item PC-V03 Elaborar informe incidencias en la sucursal.
 	\end{itemize}
+\end{Usuario}
+
+%---------------------------------------------------------
+%=======HASTA AQUI TERMINA PARA AGREGAR A TU ACTOR========
+
+%=========COPIA DESDE AQUI PARA AGREGAR A TU ACTOR=========
+%---------------------------------------------------------
+\begin{Usuario}{\subsection{Ventas}}{
+		Es el encargado de la venta de membresías y de registrar a los clientes cuando la adquieran y registrar a los invitados.
+	}
+	\item[Responsabilidades:] \cdtEmpty
+	\begin{itemize}
+		\item Genera citas para los clientes cuando entren como invitados.
+		\item Agrega datos de los clientes.
+		\item 
+	\end{itemize}
+	
+	\item[Perfil:] \cdtEmpty
+	\begin{itemize}
+		\item Amplia experiencia en el ramo.
+		\item Licenciatura como mínimo.
+	\end{itemize}
+	
 \end{Usuario}
 
 %---------------------------------------------------------
@@ -97,6 +146,10 @@
 		\FRitem{RU7}{Registro de pago}{El usuario requiere ver la información de los clientes que realizan su pago.}{1}{\PLAN}
 		\FRitem{RU8}{Aviso de pago}{El usuario requiere informar al cliente de su próximo pago.}{1}{\PLAN}
 		\FRitem{RU9}{Registro de ingreso}{El usuario requiere ver la información de quién ingresa a la sucursal.}{1}{\PLAN}
+		\FRitem{RU10}{Busqueda Actividades populares}{El usuario requiere ver cuales son las actividades que mas clientes adquieren.}{1}{\PLAN}
+		\FRitem{RU11}{Conteo de membresías}{El usuario requiere saber el tipo de membresía que mas vende.}{1}{\PLAN}
+		\FRitem{RU12}{Identificación de nichos de mercado}{El usuario requiere ver cuales son sus clientes principales, divididos por genero, edad, zona geográfica.}{1}{\PLAN}
+		\FRitem{RU9}{Retencion de clientes}{El usuario requiere mejoras de servicio para retener a los clientes registrados.}{1}{\PLAN}
 		
 	\end{requerimientosU}
 	\caption{Requerimientos funcionales del sistema.}
