--- a/reprote0.2/4ModeloDinamico.tex
+++ b/reprote0.2/4ModeloDinamico.tex
@@ -6,20 +6,44 @@
 
 \begin{figure}[htbp]
 	\begin{center}
-		\includegraphics[angle=90, width=.7\textwidth]{images/CUcompleto1}
+		\includegraphics[angle=90, width=.7\textwidth]{images/cu/1J_inmobiliario}
 		\caption{Diagrama detallado del sistema parte 1.}
 		\label{fig:CUcompleto1}
 	\end{center}
 \end{figure}
 
 \begin{figure}[htbp]
-	%\begin{center}
-		\includegraphics[angle=90, width=1.1\textwidth]{images/CUcompleto2}
-		\caption{Diagrama detallado del sistema parte 1.}
+	\begin{center}
+		\includegraphics[angle=90, width=.8\textwidth]{images/cu/2Gerente}
+		\caption{Diagrama detallado del sistema parte 2.}
 		\label{fig:CUcompleto2}
-	%\end{center}
+	\end{center}
 \end{figure}
 
+
+\begin{figure}[htbp]
+	\begin{center}
+		\includegraphics[angle=90, width=.8\textwidth]{images/cu/3Ventas}
+		\caption{Diagrama detallado del sistema parte 3.}
+		\label{fig:CUcompleto2}
+	\end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+	\begin{center}
+		\includegraphics[angle=90, width=.8\textwidth]{images/cu/4Recepcionista}
+		\caption{Diagrama detallado del sistema parte 4.}
+		\label{fig:CUcompleto2}
+	\end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+	\begin{center}
+		\includegraphics[angle=90, width=.8\textwidth]{images/cu/5Cliente}
+		\caption{Diagrama detallado del sistema parte 5.}
+		\label{fig:CUcompleto2}
+	\end{center}
+\end{figure}
 %---------------------------------------------------------
 \section{Descripción de actores}
 
@@ -31,8 +55,13 @@ A continuación se detallan los casos de uso.
 % CASOS DE USO
 
 \input{cu/cu17}
+\input{cu/isaac}
 \input{cu/CUDaniel}
+\input{cu/luis2}
+
+%Fdialoos
 \input{cu/dialog}
+\input{cu/luis1}
 %---------------------------------------------------------
 % PANTALLAS DE LOS CASOS DE USO
 \IUfig[.5]{LoginJI}{IU1}{Pantalla de login del jefe de inmobiliario.}
@@ -46,6 +75,20 @@ A continuación se detallan los casos de uso.
 \IUfig[.5]{FinEditarAC}{IU5}{Pantalla de Edición terminada.}
 
 \IUfig[.5]{VerActividadJI}{IU6}{Pantalla de Ver Actividad.}
+
+\IUfig[.5]{loginCliente}{IU22}{Pantalla de Inicio de sesion del cliente.}
+
+\IUfig[.5]{inicioCliente}{IU23}{Pantalla de Inicio del cliente.}
+
+
+
+
+
+\IUfig[.5]{Instructores}{IU35}{Pantalla de Instructores.}
+
+\IUfig[.5]{NuevoInstructor}{IU351}{Pantalla Nuevo Instructor.}
+
+\IUfig[.5]{EditarInstructor}{IU352}{Pantalla Editar Instructor.}
 
 \IUfig[.5]{loginCliente}{IU22}{Pantalla de Inicio de sesion del cliente.}
 
